--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,8 @@
 	box-sizing: border-box;
 }
 
-html {
-	font-size: 62,5%;
-}
-
 body {
-	font-size: 1.0rem;
+	font-size: 1rem;
 	font-weight: 400;
 	font-family: var(--fonte-principal);
 }
@@ -28,9 +24,10 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	gap: 1.0rem;
+	gap: 0.625rem;
 	background-color: var(--preto);
-	padding: 1.6rem;
+	padding: 1rem;
+	height: 18vh;
 }
 
 .cabecalho__logo, .rodape__logo {
@@ -52,32 +49,36 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	gap: 1.0rem;
+	gap: 0.625rem;
 	width: 100%;
-	padding: 0rem 1.0rem 1.6rem 1.0rem;
+	padding: 0rem 1rem 1rem 1rem;
 }
 
-.conteudo-principal__titulo, 
-.conteudo-principal__descricao {
+.conteudo-principal__titulo {
 	text-align: center;
+	margin-bottom: 0.5rem;
+}
+
+.conteudo-principal__titulo > p {
+	margin-top: 0.5rem;
 }
 
 .secao-esportes {
 	display: flex;
 	flex-direction: column;
-	gap: 1.6rem;
 }
 
 .esporte {
 	display: flex;
 	flex-direction: column;
-	gap: 0.3rem;
+	gap: 0.1875rem;
+	padding: 1rem;
 }
 
 .esporte-imagem, .categoria-imagem {
 	width: 100%;
-	border-radius: 0.8rem;
-	flex-basis: 10.0rem;
+	border-radius: 0.5rem;
+	flex: 1 0 auto;
 }
 
 .secao-categorias {
@@ -85,9 +86,9 @@ body {
 	color: var(--branco);
 	display: flex;
 	flex-direction: column;
-	gap: 1.0rem;
+	gap: 0.625rem;
 	text-align: center;
-	padding: 1.6rem;
+	padding: 1rem;
 }
 
 .categoria-titulo {
@@ -98,9 +99,101 @@ body {
 	align-self: center;
 	text-decoration: none;
 	color: var(--branco);
-	font-size: 1.6rem;
+	font-size: 1rem;
 }
 
-@media (width >=480px) {
+@media (width >= 640px) {
+	body {
+		font-size: 1.125rem;
+	}
 
+	.cabecalho, .rodape {
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+		padding: 1rem 2rem 1rem 2rem;
+	}
+
+	.cabecalho__logo, .rodape__logo {
+		width: 40%;
+	}
+
+	.cabecalho__navegacao {
+		justify-content: space-around;
+		gap: 1rem;
+	}
+
+	.secao-esportes {
+		display: grid;
+		grid-template-areas: 
+		"esporte-boxe esporte-crossfit";
+	}
+
+	.esporte-boxe {
+		grid-area: esporte-boxe;
+	}
+
+	.esporte-crossfit {
+		grid-area: esporte-crossfit;
+	}
+}
+
+@media (width >= 1024px) {
+	.conteudo-principal {
+		display: grid;
+		grid-template-columns: repeat(4, 1fr);
+		grid-template-areas: 
+		"conteudo-principal__titulo conteudo-principal__titulo conteudo-principal__titulo conteudo-principal__titulo"
+		"secao-esportes secao-esportes secao-esportes secao-categorias";
+		gap: 1rem;
+		margin-top: 1rem;
+	}
+
+	.conteudo-principal__titulo {
+		grid-area: conteudo-principal__titulo;
+	}
+
+	.secao-esportes {
+		grid-area: secao-esportes;
+	}
+
+	.secao-categorias {
+		grid-area: secao-categorias;
+		margin-top: 1rem;
+	}
+
+	.cabecalho__logo, .rodape__logo {
+		width: 20%;
+	}
+
+	.rodape__link-topo {
+		font-size: 2rem;
+	}
+}
+
+@media (width >= 1280px) {
+	.secao-esportes {
+		display: grid;
+		grid-template-areas: 
+		"esporte-boxe esporte-crossfit esporte-natacao";
+	}
+
+	.esporte-natacao {
+		grid-area: esporte-natacao;
+	}
+
+	.esporte:hover {
+		border: 0.0625rem solid var(--preto);
+		border-radius: 0.5rem;
+	}
+}
+
+@media (width >= 1440px) {
+	body {
+		font-size: 1.5rem;
+	}
+
+	.cabecalho__logo, .rodape__logo {
+		width: 15%;
+	}
 }
